[tool.poetry]
name = "nevod-pulse"
version = "0.1.0"
description = "nevod api and monitoring system"
authors = ["Pavel <Plyubimov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.3"
prometheus-client = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
